force-app/main/default/objects/ffr__SummarizationTemplateFieldProcess__c/ffr__SummarizationTemplateFieldProcess__c.object-meta.xml
<CustomObject>
    <description>Stores the method by which information in a field will be aggregated.</description>
    <label>Summarization Template Field Process</label>
    <nameField>
        <displayFormat>SFP-{000000}</displayFormat>
        <label>Summarization Template Field Process Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Summarization Template Field Processes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>