force-app/main/default/objects/ffr__SummarizationTemplateFieldProcess__c/fields/ffr__FieldName__c.field-meta.xml
<CustomField>
    <fullName>ffr__FieldName__c</fullName>
    <label>FieldName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>