force-app/main/default/objects/ffr__SummarizationTemplateFieldProcess__c/fields/ffr__Process__c.field-meta.xml
<CustomField>
    <fullName>ffr__Process__c</fullName>
    <description>The process by which all information in this field will be aggregated.</description>
    <label>Summarization Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Group By</fullName>
            </value>
            <value>
                <fullName>SUM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>