force-app/main/default/objects/ffr__SummarizationTemplateFieldProcess__c/fields/ffr__SummarizationTemplate__c.field-meta.xml
<CustomField>
    <fullName>ffr__SummarizationTemplate__c</fullName>
    <description>The summarization template to which this field mapping process belongs.</description>
    <label>Summarization Template</label>
    <referenceTo>ffr__SummarizationTemplate__c</referenceTo>
    <relationshipLabel>SummarizationTemplateFieldProcesses</relationshipLabel>
    <relationshipName>SummarizationTemplateFieldProcesses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>